--- a/style.css
+++ b/style.css
@@ -367,6 +367,24 @@ footer {
         display: block;
     }
 
+    .fa-arrow-up {
+        -webkit-animation: mover 1s infinite  alternate;
+        animation: mover 1s infinite  alternate;
+    }
+    .fa-arrow-up {
+        -webkit-animation: mover 1s infinite  alternate;
+        animation: mover 1s infinite  alternate;
+    }
+    @-webkit-keyframes mover {
+        0% { transform: translateY(0); }
+        100% { transform: translateY(-10px); }
+    }
+    @keyframes mover {
+        0% { transform: translateY(0); }
+        100% { transform: translateY(-10px); }
+    }
+
+
     .arrastar-pra-cima i {
         font-size: 30px;
         color: yellow;
