--- a/style.css
+++ b/style.css
@@ -157,7 +157,14 @@ main {
     display: flex;
     gap: 20px;
     margin: 30px 0;
+    text-decoration: none;
 }
+
+.card-grid a {
+    text-decoration: none;
+    color: #000;
+}
+
 
 .card {
     flex: 1;
@@ -245,13 +252,14 @@ span {
     height: 100%;
     background-image: url("assets/conserto.jpg");
     background-size: cover;
+    background-position: center center;
 }
 
 /* MANUTENÇÃO */
 #endereco {
     background-image: url("assets/endereco.jpg");
     background-size: cover;
-    height: 100vh;
+    background-position: center center;
 }
 
 .endereco {
@@ -443,11 +451,6 @@ footer {
 
     /* SERVIÇOS */
 
-    .fundo-footer {
-        height: 997px;
-        object-fit: cover;
-    }
-
     .endereco {
         flex-direction: column;
         align-items: center;
@@ -475,7 +478,7 @@ footer {
     }
 
     footer {
-        margin: 30px 0 0 0;
+        margin: 0;
         padding: 0 0 20px 0;
     }
     
@@ -512,13 +515,6 @@ footer {
         top: 15px;
     }
 
-    .manutencao-fundo {
-        height: 655px;
-    }
-
-    .fundo-footer {
-        height: 1021px;
-    }
 
     .manutencao {
         margin-bottom: 40px;
